--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-eta: 0.001
+eta: 0.01
 n_iter: 1000
 lambda_: 0.01
-gradient_type: "mini-batch"  # Choix : "batch", "sgd", "mini-batch"
+gradient_type: "batch"  # Choix : "batch", "sgd", "mini-batch"
 batch_size: 32  # Taille des mini-batchs pour mini-batch GD
